<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/personalInfoCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewName"
            style="@style/PersonalInformationText"
            android:text="@string/personal_info_name" />

        <TextView
            android:id="@+id/textViewAddress"
            style="@style/PersonalInformationText"
            android:text="@string/personal_info_address" />

        <TextView
            android:id="@+id/textViewPhone"
            style="@style/PersonalInformationText"
            android:text="@string/personal_info_phone" />

        <TextView
            android:id="@+id/textViewEmail"
            style="@style/PersonalInformationText"
            android:text="@string/personal_info_email" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
