<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvJobDuration3"
        style="@style/TextViewDuration"
        android:text="@string/job3_duration"
        app:layout_constraintBottom_toBottomOf="@id/tvJobName3"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvJobName3"
        app:layout_constraintTop_toTopOf="@id/tvJobName3" />

    <TextView
        android:id="@+id/tvJobName3"
        style="@style/CardViewName"
        android:text="@string/job3_name"
        app:layout_constraintBottom_toTopOf="@id/tvJobDescription3"
        app:layout_constraintLeft_toRightOf="@id/tvJobDuration3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvJobDescription3"
        style="@style/CardViewDescription"
        android:text="@string/job3_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvJobResponsibilities3"
        app:layout_constraintTop_toBottomOf="@id/tvJobDuration3" />

    <TextView
        android:id="@+id/tvJobResponsibilities3"
        style="@style/CardViewDetails"
        android:text="@string/job3_responsibilities"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJobDescription3" />

</androidx.constraintlayout.widget.ConstraintLayout>
