<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvDurationEducation2"
        style="@style/TextViewDuration"
        android:text="@string/education2_duration"
        app:layout_constraintBottom_toBottomOf="@id/tvSchoolName2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvSchoolName2"
        app:layout_constraintTop_toTopOf="@id/tvSchoolName2" />

    <TextView
        android:id="@+id/tvSchoolName2"
        style="@style/CardViewName"
        android:text="@string/education2_name"
        app:layout_constraintBottom_toTopOf="@id/tvDescriptionEducation2"
        app:layout_constraintLeft_toRightOf="@id/tvDurationEducation2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescriptionEducation2"
        style="@style/CardViewDescription"
        android:text="@string/education2_description"
        app:layout_constraintBottom_toTopOf="@id/tvSkillsEducation2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDurationEducation2" />

    <TextView
        android:id="@+id/tvSkillsEducation2"
        style="@style/CardViewDetails"
        android:text="@string/education2_skills"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescriptionEducation2" />

</androidx.constraintlayout.widget.ConstraintLayout>
